--- a/_sass/pages/single-gally.scss
+++ b/_sass/pages/single-gally.scss
@@ -50,7 +50,7 @@
 
 .fts-header__title {
     font-size: 3rem;
-    line-height: 1.4;
+    line-height: 1.04;
     font-weight: 700;
     text-align: center;
     margin-bottom: 20px;
@@ -173,6 +173,7 @@
 .mobile-lower-meta__genre-list-tags {
     margin-top: 1rem;
     margin-bottom: 0;
+    display: flex;
 }
 .tag-list__item {
     margin-bottom: .4rem;
@@ -182,12 +183,7 @@
 
     & .tag-list__item {
         display: inline-block;
-
-        &:after{
-            margin: 0 .8rem 0 .55rem;
-            content: " /";
-            color: $color-accent; 
-        }
+        margin-right: .5em;
     }
     
 }
@@ -368,6 +364,20 @@
 
     & .genre-list-tags{
         margin-bottom: 10px;
+        display: flex;
+        flex-flow: column;
+
+        & li:not(:last-of-type){
+            &::after{
+                content: " / ";
+                margin: 0 .35em;
+            }
+        }
+
+        @media only screen and (max-width: 1040px) and (min-width: 750px) {
+            flex-flow: row;
+            justify-content: center;
+        }
     }
 
     & .pub-date{
@@ -759,4 +769,12 @@ element {
     left: 35%;
     box-shadow: none;
     margin-bottom: 1em;
+}
+
+.horizontal-modules .feature-module .article-details .date,
+.horizontal-modules .feature-module .article-details .meta .module__byline,
+.horizontal-modules .feature-module .article-details .abstract{
+    @media (min-width: 750px) and (max-width: 1040px){
+        text-align: center;
+    }
 }
