--- a/_layouts/latest.html
+++ b/_layouts/latest.html
@@ -10,7 +10,7 @@ layout: default
                 <div class="inner-site-container">
                     <div class="site-title">
                         <div class="title title-container">
-                            <h1>Latest stories</h1>
+                            <h1>Latest tories</h1>
                             <p class="site-title-para"></p>
                         </div>
                     </div>
