--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,10 +1,9 @@
 header{
     border-bottom: 1px solid $background-border-decor--lite;
-    @include border(1px, solid, #{$background-border-decor-string}, -bottom);
-    // overflow: hidden;
-    position: relative;
+    position: fixed;
     width: 100%;
-    height: 4em;
+    height: 3em;
+    border-bottom: none;
     background: $background-nav--lite;
     @include bg-color(#{$background-nav-string});
     padding-top: 1em;
@@ -13,12 +12,16 @@ header{
     @media #{$lg-scn} {
         padding-top: .1em;
         height: 6em;
+        @include border(1px, solid, #{$background-border-decor-string}, -bottom);
+        // overflow: hidden;
+        position: relative;
     }
-    @media (max-width: 1039px){
-        position: fixed;
-        height: 3em;
-        border-bottom: none;
-    }
+    // @media (min-width: 1039px){
+    //     @include border(1px, solid, #{$background-border-decor-string}, -bottom);
+    //     // overflow: hidden;
+    //     position: relative;
+    //     height: 4em;
+    // }
 
     .hide{
         transform: translateX(-100%);
@@ -103,6 +106,12 @@ header{
     display: none;
     @media #{$lg-scn} {
         display: flex;
+    }
+}
+
+.turnofff{
+    @media (min-width: 992px){
+        display: none ;
     }
 }
 .lower-nav{
