--- a/_layouts/single_gallery_page.html
+++ b/_layouts/single_gallery_page.html
@@ -122,7 +122,7 @@ title: Gallery
         </main>
 
         <!-- Gallery Modal -->
-        <div id="modal-portal" style="visibility: hiddden;">
+        <div id="modal-portal" style="visibility: hidden;">
             <div class="gallery-dtl">
                 <button class="gallery-close-btn close-btn gallery__close-btn">
                     <svg class="close" viewBox="0 0 21.3 19.5">
